--- a/home/index.html
+++ b/home/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MediaQueries</title>
-    <link rel="stylesheet" href="../assets/pc.css">
-    <link rel="stylesheet" href="../assets/mobile.css">
-    <link rel="stylesheet" href="../assets/tab.css">
+    <title>Simple-page</title>
+    <link rel="stylesheet" href="/../assets/pc.css">
+    <link rel="stylesheet" href="/../assets/mobile.css">
+    <link rel="stylesheet" href="/../assets/tab.css">
 </head>
 <body>
 <div class="prt">
