--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple-page</title>
-    <link rel="stylesheet" href="/home/pc.css">
-    <link rel="stylesheet" href="/home/mobile.css">
-    <link rel="stylesheet" href="/home/tab.css">
+    <link rel="stylesheet" href="home/pc.css">
+    <link rel="stylesheet" href="home/mobile.css">
+    <link rel="stylesheet" href="home/tab.css">
 </head>
 <body>
 <div class="prt">
