--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Simple-page</title>
     <link rel="stylesheet" href="home/pc.css">
     <link rel="stylesheet" href="home/mobile.css">
